force-app/main/default/objects/Formulario__c/Formulario__c.object-meta.xml
<CustomObject>
    <label>Historia Clínica</label>
    <nameField>
        <label>Nombre de Formulario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historias Clínicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>