force-app/main/default/objects/Formulario__c/fields/Acceso_Enteral_Integro_Permeable__c.field-meta.xml
<CustomField>
    <fullName>Acceso_Enteral_Integro_Permeable__c</fullName>
    <label>Acceso enteral integro / permeable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>