force-app/main/default/objects/Formulario__c/fields/Acceso_enteral_permeable__c.field-meta.xml
<CustomField>
    <fullName>Acceso_enteral_permeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceso enteral permeable</label>
    <type>Checkbox</type>
</CustomField>