force-app/main/default/objects/Formulario__c/fields/Actualizaci_n_de_la_prescripci_n__c.field-meta.xml
<CustomField>
    <fullName>Actualizaci_n_de_la_prescripci_n__c</fullName>
    <label>Actualización de la prescripción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>