force-app/main/default/objects/Formulario__c/fields/Albumina__c.field-meta.xml
<CustomField>
    <fullName>Albumina__c</fullName>
    <label>Albúmina</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>