force-app/main/default/objects/Formulario__c/fields/Alergia__c.field-meta.xml
<CustomField>
    <fullName>Alergia__c</fullName>
    <label>Alergias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>