force-app/main/default/objects/Formulario__c/fields/Alergia_nutricion__c.field-meta.xml
<CustomField>
    <fullName>Alergia_nutricion__c</fullName>
    <label>Alergia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>