force-app/main/default/objects/Formulario__c/fields/Alimentaci_n_habitual__c.field-meta.xml
<CustomField>
    <fullName>Alimentaci_n_habitual__c</fullName>
    <label>Alimentación habitual</label>
    <type>TextArea</type>
</CustomField>