force-app/main/default/objects/Formulario__c/fields/Alimentacion__c.field-meta.xml
<CustomField>
    <fullName>Alimentacion__c</fullName>
    <label>Alimentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Dependiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>