force-app/main/default/objects/Formulario__c/fields/Almacenamiento_de_Productos__c.field-meta.xml
<CustomField>
    <fullName>Almacenamiento_de_Productos__c</fullName>
    <label>Almacenamiento de Productos ¿Comprende?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>