force-app/main/default/objects/Formulario__c/fields/Alteracion_en_la_capacidad_funcional__c.field-meta.xml
<CustomField>
    <fullName>Alteracion_en_la_capacidad_funcional__c</fullName>
    <label>¿Alteración en la capacidad funcional?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>