force-app/main/default/objects/Formulario__c/fields/Ambiente_de_uso_APM__c.field-meta.xml
<CustomField>
    <fullName>Ambiente_de_uso_APM__c</fullName>
    <inlineHelpText>Dispositivo de Ayuda para la Marcha</inlineHelpText>
    <label>Ambiente de uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domiciliario</fullName>
            </value>
            <value>
                <fullName>Comunitario</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
                <isActive>false</isActive>
                <label>Si</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>