force-app/main/default/objects/Formulario__c/fields/Antecedentes__c.field-meta.xml
<CustomField>
    <fullName>Antecedentes__c</fullName>
    <label>Antecedentes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>