force-app/main/default/objects/Formulario__c/fields/Aporte_cal_rico_enteral_Kcal_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_cal_rico_enteral_Kcal_d_a__c</fullName>
    <label>Aporte calórico enteral (Kcal/día)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>