force-app/main/default/objects/Formulario__c/fields/Aporte_cal_rico_Kcal_d_a_kg__c.field-meta.xml
<CustomField>
    <fullName>Aporte_cal_rico_Kcal_d_a_kg__c</fullName>
    <formula>Aporte_cal_rico_Kcal_d_a__c / Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aporte calórico (Kcal/día/kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>