force-app/main/default/objects/Formulario__c/fields/Aporte_cal_rico_oral_Kcal_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_cal_rico_oral_Kcal_d_a__c</fullName>
    <label>Aporte calórico oral (Kcal/día)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>