force-app/main/default/objects/Formulario__c/fields/Aporte_cal_rico_total_Kcal_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_cal_rico_total_Kcal_d_a__c</fullName>
    <formula>Aporte_cal_rico_enteral_Kcal_d_a__c + Aporte_v_a_oral_Kcal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aporte calórico total (Kcal/día)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>