force-app/main/default/objects/Formulario__c/fields/Aporte_calorico_total_Kcal_dia__c.field-meta.xml
<CustomField>
    <fullName>Aporte_calorico_total_Kcal_dia__c</fullName>
    <label>Aporte calorico total (Kcal/dia)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>