force-app/main/default/objects/Formulario__c/fields/Aporte_calorico_y_proteico__c.field-meta.xml
<CustomField>
    <fullName>Aporte_calorico_y_proteico__c</fullName>
    <label>Aporte calórico y protéico</label>
    <length>100</length>
    <type>Text</type>
</CustomField>