force-app/main/default/objects/Formulario__c/fields/Aporte_proteico_g_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_proteico_g_d_a__c</fullName>
    <label>Aporte proteico (g/día)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>