force-app/main/default/objects/Formulario__c/fields/Aporte_Proteico_g_kg_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Proteico_g_kg_d_a__c</fullName>
    <formula>Aporte_proteico_total_g_dia__c / Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aporte Proteico (g/kg/día)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>