force-app/main/default/objects/Formulario__c/fields/Aporte_proteico_oral_g_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_proteico_oral_g_d_a__c</fullName>
    <label>Aporte proteico oral (g/día)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>