force-app/main/default/objects/Formulario__c/fields/Aporte_proteico_total_g_d_a__c.field-meta.xml
<CustomField>
    <fullName>Aporte_proteico_total_g_d_a__c</fullName>
    <formula>Aporte_proteico_enteral_g_d_a__c + Aporte_proteico_g_d_a__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aporte proteico total (g/día)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>