force-app/main/default/objects/Formulario__c/fields/Aporte_proteico_total_g_dia__c.field-meta.xml
<CustomField>
    <fullName>Aporte_proteico_total_g_dia__c</fullName>
    <label>Aporte proteico total (g/dia)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>