force-app/main/default/objects/Formulario__c/fields/Aporte_proteico_total_g_kg__c.field-meta.xml
<CustomField>
    <fullName>Aporte_proteico_total_g_kg__c</fullName>
    <formula>Aporte_proteico_total_g_d_a__c / Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aporte proteico total (g/kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>