force-app/main/default/objects/Formulario__c/fields/Aporte_v_a_oral_Kcal__c.field-meta.xml
<CustomField>
    <fullName>Aporte_v_a_oral_Kcal__c</fullName>
    <label>Ingesta vía oral (Kcal)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>