force-app/main/default/objects/Formulario__c/fields/area_muscular_del_brazo__c.field-meta.xml
<CustomField>
    <fullName>area_muscular_del_brazo__c</fullName>
    <label>Circunferencia muscular del brazo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>