force-app/main/default/objects/Formulario__c/fields/Arritmia__c.field-meta.xml
<CustomField>
    <fullName>Arritmia__c</fullName>
    <label>Arritmias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>