force-app/main/default/objects/Formulario__c/fields/Arritmia_Cronica__c.field-meta.xml
<CustomField>
    <fullName>Arritmia_Cronica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arritmia Crónica</label>
    <type>Checkbox</type>
</CustomField>