force-app/main/default/objects/Formulario__c/fields/Ascitis__c.field-meta.xml
<CustomField>
    <fullName>Ascitis__c</fullName>
    <label>Ascitis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>