force-app/main/default/objects/Formulario__c/fields/Asistencia_kin_sica_respiratoria_AKR__c.field-meta.xml
<CustomField>
    <fullName>Asistencia_kin_sica_respiratoria_AKR__c</fullName>
    <label>Asistencia kinésica respiratoria (AKR).</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>