force-app/main/default/objects/Formulario__c/fields/Asma__c.field-meta.xml
<CustomField>
    <fullName>Asma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asma</label>
    <type>Checkbox</type>
</CustomField>