force-app/main/default/objects/Formulario__c/fields/Aspiraci_n__c.field-meta.xml
<CustomField>
    <fullName>Aspiraci_n__c</fullName>
    <label>Aspiración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>