force-app/main/default/objects/Formulario__c/fields/Auscultacion_abdominal__c.field-meta.xml
<CustomField>
    <fullName>Auscultacion_abdominal__c</fullName>
    <label>Auscultación abdominal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>