force-app/main/default/objects/Formulario__c/fields/Auscultacion_cardiovascular__c.field-meta.xml
<CustomField>
    <fullName>Auscultacion_cardiovascular__c</fullName>
    <label>Auscultación cardiovascular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>