force-app/main/default/objects/Formulario__c/fields/Auscultacion_respiratoria__c.field-meta.xml
<CustomField>
    <fullName>Auscultacion_respiratoria__c</fullName>
    <label>Auscultación respiratoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>