force-app/main/default/objects/Formulario__c/fields/Bano__c.field-meta.xml
<CustomField>
    <fullName>Bano__c</fullName>
    <inlineHelpText>Independiente: Se baña enteramente solo o necesita ayuda sólo para lavar una zona (como la espalda o una extremidad con minusvalía).

Dependiente: Necesita ayuda para lavar más de una zona, ayuda para salir o entrar en la bañera o no se baña solo.</inlineHelpText>
    <label>Baño</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Dependiente</fullName>
            </value>
            <value>
                <fullName>Cámara séptica</fullName>
                <isActive>false</isActive>
                <label>Cámara séptica</label>
            </value>
            <value>
                <fullName>Pozo ciego</fullName>
                <isActive>false</isActive>
                <label>Pozo ciego</label>
            </value>
            <value>
                <fullName>Red pública</fullName>
                <isActive>false</isActive>
                <label>Red pública</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>