force-app/main/default/objects/Formulario__c/fields/Bano_Katz__c.field-meta.xml
<CustomField>
    <fullName>Bano_Katz__c</fullName>
    <inlineHelpText>Independiente: Se baña enteramente solo o necesita ayuda sólo para lavar una zona (como la espalda o una extremidad con minusvalía).

Dependiente: Necesita ayuda para lavar más de una zona, ayuda para salir o entrar en la bañera o no se baña solo.</inlineHelpText>
    <label>Baño</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Dependiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>