force-app/main/default/objects/Formulario__c/fields/Bipedestaci_n__c.field-meta.xml
<CustomField>
    <fullName>Bipedestaci_n__c</fullName>
    <label>Bipedestación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No logra Bipedestar</fullName>
            </value>
            <value>
                <fullName>Asistencia máxima</fullName>
            </value>
            <value>
                <fullName>Asistencia mínima</fullName>
            </value>
            <value>
                <fullName>Sin asistencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>