force-app/main/default/objects/Formulario__c/fields/Bolos__c.field-meta.xml
<CustomField>
    <fullName>Bolos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bolos</label>
    <type>Checkbox</type>
</CustomField>