force-app/main/default/objects/Formulario__c/fields/Broncoaspiracion__c.field-meta.xml
<CustomField>
    <fullName>Broncoaspiracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broncoaspiración</label>
    <type>Checkbox</type>
</CustomField>