force-app/main/default/objects/Formulario__c/fields/BT__c.field-meta.xml
<CustomField>
    <fullName>BT__c</fullName>
    <label>BT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>