force-app/main/default/objects/Formulario__c/fields/Calcio_Total__c.field-meta.xml
<CustomField>
    <fullName>Calcio_Total__c</fullName>
    <label>Calcio Total (mg/dl)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>