force-app/main/default/objects/Formulario__c/fields/Calor_as_n_3__c.field-meta.xml
<CustomField>
    <fullName>Calor_as_n_3__c</fullName>
    <label>Calorías n°3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>