force-app/main/default/objects/Formulario__c/fields/Calor_as_n_4__c.field-meta.xml
<CustomField>
    <fullName>Calor_as_n_4__c</fullName>
    <label>Calorías n°4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>