force-app/main/default/objects/Formulario__c/fields/Calorias_n_2__c.field-meta.xml
<CustomField>
    <fullName>Calorias_n_2__c</fullName>
    <label>Calorías n°2</label>
    <length>7</length>
    <type>Text</type>
</CustomField>