force-app/main/default/objects/Formulario__c/fields/Calorias_totales__c.field-meta.xml
<CustomField>
    <fullName>Calorias_totales__c</fullName>
    <label>Calorías totales</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>