force-app/main/default/objects/Formulario__c/fields/Cambio_de_kcal_diarias__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_kcal_diarias__c</fullName>
    <label>Cambio de kcal diarias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>