force-app/main/default/objects/Formulario__c/fields/Cambio_de_modulo__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_modulo__c</fullName>
    <label>Cambio de módulo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>