force-app/main/default/objects/Formulario__c/fields/Cambio_de_peso_ultimas_2_semanas__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_peso_ultimas_2_semanas__c</fullName>
    <label>Cambio de peso últimas 2 semanas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aumento</fullName>
            </value>
            <value>
                <fullName>Sin Cambios</fullName>
            </value>
            <value>
                <fullName>Descenso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>