force-app/main/default/objects/Formulario__c/fields/Cambio_de_tipo_de_formula__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_tipo_de_formula__c</fullName>
    <label>Cambio de tipo de fórmula</label>
    <length>100</length>
    <type>Text</type>
</CustomField>