force-app/main/default/objects/Formulario__c/fields/Cambio_en_las_ultimas_dos_semanas__c.field-meta.xml
<CustomField>
    <fullName>Cambio_en_las_ultimas_dos_semanas__c</fullName>
    <label>Cambio en las últimas 2 semanas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aumento</fullName>
            </value>
            <value>
                <fullName>sin cambios</fullName>
            </value>
            <value>
                <fullName>descenso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>