force-app/main/default/objects/Formulario__c/fields/Cambio_ingesta_respecto_a_lo_habitual__c.field-meta.xml
<CustomField>
    <fullName>Cambio_ingesta_respecto_a_lo_habitual__c</fullName>
    <label>¿Cambio ingesta respecto a lo habitual?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>