force-app/main/default/objects/Formulario__c/fields/Cambios_Indicaciones_Anteriores__c.field-meta.xml
<CustomField>
    <fullName>Cambios_Indicaciones_Anteriores__c</fullName>
    <label>¿Cambios Indicaciones Anteriores?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>