force-app/main/default/objects/Formulario__c/fields/Cantidad_de_bolos_y_volumen__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_bolos_y_volumen__c</fullName>
    <label>Cantidad de bolos y volumen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>