force-app/main/default/objects/Formulario__c/fields/Capacidad_funcional__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_funcional__c</fullName>
    <label>Capacidad funcional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postrado</fullName>
            </value>
            <value>
                <fullName>Ambulatorio</fullName>
            </value>
            <value>
                <fullName>Trabaja con dificultad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>