force-app/main/default/objects/Formulario__c/fields/Capacidad_Funcional_Sin_difusion__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Funcional_Sin_difusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capacidad Funcional ¿Sin difusión?</label>
    <type>Checkbox</type>
</CustomField>