force-app/main/default/objects/Formulario__c/fields/Caracteristicas_de_la_formula_1__c.field-meta.xml
<CustomField>
    <fullName>Caracteristicas_de_la_formula_1__c</fullName>
    <label>Caracteristicas producto n°1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polimérica estándar</fullName>
            </value>
            <value>
                <fullName>Polimérica con fibra</fullName>
            </value>
            <value>
                <fullName>Semielemental</fullName>
            </value>
            <value>
                <fullName>Para diabetes</fullName>
            </value>
            <value>
                <fullName>De alta densidad calórica</fullName>
            </value>
            <value>
                <fullName>Hiperproteica</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
            <value>
                <fullName>Alergias</fullName>
                <isActive>false</isActive>
                <label>Alergias</label>
            </value>
            <value>
                <fullName>Antirreflujo</fullName>
                <isActive>false</isActive>
                <label>Antirreflujo</label>
            </value>
            <value>
                <fullName>Dieta Cetogénica</fullName>
                <isActive>false</isActive>
                <label>Dieta Cetogénica</label>
            </value>
            <value>
                <fullName>Elemental</fullName>
                <isActive>false</isActive>
                <label>Elemental</label>
            </value>
            <value>
                <fullName>Enf. Metabólicas</fullName>
                <isActive>false</isActive>
                <label>Enf. Metabólicas</label>
            </value>
            <value>
                <fullName>Hidrolizados parciales extensos</fullName>
                <isActive>false</isActive>
                <label>Hidrolizados parciales extensos</label>
            </value>
            <value>
                <fullName>Módulo</fullName>
                <isActive>false</isActive>
                <label>Módulo</label>
            </value>
            <value>
                <fullName>Para UPP</fullName>
                <isActive>false</isActive>
                <label>Para UPP</label>
            </value>
            <value>
                <fullName>Prematuro</fullName>
                <isActive>false</isActive>
                <label>Prematuro</label>
            </value>
            <value>
                <fullName>Sin lactosa</fullName>
                <isActive>false</isActive>
                <label>Sin lactosa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>